<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".feedback_options">

    <androidx.cardview.widget.CardView
        android:id="@+id/weekly"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="30dp"
        android:alpha="0.75"
        android:background="@drawable/card"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/weekly_feedback"
            android:textColor="@color/black"
            android:textSize="28sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/mse"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="30dp"
        android:alpha="0.75"
        android:background="@drawable/card"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toTopOf="@+id/ese"
        app:layout_constraintTop_toBottomOf="@+id/weekly"
        tools:layout_editor_absoluteX="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/mse_feedback"
            android:textColor="@color/black"
            android:textSize="28sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/ese"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="30dp"
        android:alpha="0.75"
        android:background="@drawable/card"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ese_feedback"
            android:textColor="@color/black"
            android:textSize="28sp" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>