<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".login"
    android:background="@drawable/attendance">
    <androidx.cardview.widget.CardView
        android:id="@+id/login_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:cardBackgroundColor="#FFFFFF"
        android:alpha="0.75"
        android:background="@drawable/custom_edittext">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="#90FFFFFF"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="36dp"
                android:text="Reset Password"
                android:id="@+id/logintext"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/purple_200"


                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/oldpassword"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:hint="@string/old_password"
                android:padding="8dp"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="40dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/newpassword"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/confirmpassword"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"
                />
            <Button
                android:id="@+id/loginbtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="Change password"
                android:textSize="18dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/purple_200"
                app:cornerRadius="20dp"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>
